<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day_label"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_1_label"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/week_2_label"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:layout_marginHorizontal="20dp"
        >


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:text="@string/monday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_monday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_monday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"

                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/calc_tuesday_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/tuesday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_tuesday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_tuesday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/wednesday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_wednesday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_wednesday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/thursday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_thursday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_thursday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/friday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_friday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_friday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/saturday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_saturday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_saturday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:text="@string/sunday_label"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/wk1_sunday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/wk2_sunday_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:textAlignment="center" />
        </TableRow>


    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TableRow
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/wk1_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:text="@string/week_1_total_label"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wk1_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"

                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>




        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/wk2_total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:text="@string/week_2_total_label"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wk2_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"

                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/total_sum_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:ems="10"
                android:importantForAutofill="no"
                android:text="@string/total_salary_label"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total_salary_calculation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"

                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                android:background="@drawable/border" />
        </TableRow>

    </TableLayout>


</LinearLayout>